<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".LoginActivity"
    tools:deviceIds="wear">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/inner_frame_layout_padding">

        <CheckBox
            android:id="@+id/checkBoxTLS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/useTLS"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/captionServerUri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/uri"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editServerUri"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.089" />

        <EditText
            android:id="@+id/editServerUri"
            android:layout_width="107dp"
            android:layout_height="35dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="4dp"
            android:ems="10"
            android:hint="@string/serverUri"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/editServerPort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/captionServerUri"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/captionServerPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/port"
            app:layout_constraintBottom_toTopOf="@+id/captionUsername"
            app:layout_constraintEnd_toStartOf="@+id/editServerPort"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/captionServerUri" />

        <EditText
            android:id="@+id/editServerPort"
            android:layout_width="107dp"
            android:layout_height="34dp"
            android:digits="0123456789"
            android:ems="10"
            android:hint="@string/serverPort"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/editUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/captionServerPort"
            app:layout_constraintTop_toBottomOf="@+id/editServerUri" />

        <TextView
            android:id="@+id/captionUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/username"
            app:layout_constraintBottom_toTopOf="@+id/captionPassword"
            app:layout_constraintEnd_toStartOf="@+id/editUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/captionServerPort" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="110dp"
            android:layout_height="38dp"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/editPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/captionUsername"
            app:layout_constraintTop_toBottomOf="@+id/editServerPort" />

        <TextView
            android:id="@+id/captionPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="58dp"
            android:text="@string/password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/captionUsername" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="109dp"
            android:layout_height="33dp"
            android:layout_marginBottom="64dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/captionPassword"
            app:layout_constraintTop_toBottomOf="@+id/editUsername" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.wear.widget.BoxInsetLayout>